# EcoUz

./: .gitignore  Makefile  README.md  TODO  docker-compose.yaml  misol  pyproject.toml  tox.ini
apps/: urls.py
apps/applications/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
apps/applications/fixtures/: applications.json  districts.json  regions.json  results.json
apps/applications/management/commands/: convert_images_to_webp.py
apps/users/: admin.py  models.py  serializers.py  urls.py  utils.py  views.py
apps/users/fixtures/: users.json
apps/users/models/: managers.py  users.py
env/: .env.prod
frontend/: appeals.html  assign.html  create_appeal.html  exe_done.html  index.html  login.html
frontend/css/: appeals.css  assign.css  create.css  login.css  style.css
frontend/js/: I18N.js  appeals.js  assign.js  create.js  login.js  main.js
locale/en/LC_MESSAGES/: django.po
locale/ru/LC_MESSAGES/: django.po
locale/uz/LC_MESSAGES/: django.po
root/: settings.py  urls.py
